apps/jenkins/solutions/app-repo-files/k8s/ingress/minikube-default/pets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: pets
spec:
  rules:
  - host: pets-default.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: pets-cluster
          servicePort: 80
        path: /
  - host: admin-pets-default.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: pets-cluster
          servicePort: 8080
        path: /
